# Aurora

./: .gitignore  FILE_TREE.md  README.md  bootstrap_aurora_repo.py  pyproject.toml  requirements.txt
aurora_apis/: alpha_vantage_client.py  benzinga_client.py  finnhub_client.py  fred_client.py  http_client.py  iex_client.py  polygon_client.py  reddit_client.py  schwab_client.py  sec_edgar_client.py  stocktwits_client.py  tradingeconomics_client.py
aurora_core/: api_manager.py  config.py  data_fusion_bus.py  logging_utils.py
tests/: test_smoke_imports.py
