[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aurora"
version = "0.1.0"
description = "Aurora market microstructure and data-fusion engine"
authors = [{ name = "Aurora System" }]
requires-python = ">=3.10"
dependencies = [
    "requests",
    "pydantic>=2.0",
    "python-dotenv",
]

[tool.pytest.ini_options]
pythonpath = ["."]
